# co2-sensor

./: .isort.cfg  .pre-commit-config.yaml  LICENSE  README.md  log_co2.py  log_co2.py~  pyproject.toml  pyproject.toml~  requirements.in
aq_monitor.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
